--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.andrewseto.echacks">
 
@@ -28,6 +29,19 @@
         <activity android:name=".RegisterScreen2"
             android:label="Register 2"
             android:theme="@style/AppTheme"/>
+        <activity android:name=".Profile"
+            android:label="Profile"
+            android:theme="@style/AppTheme"/>
+
+        <uses-permission
+            android:name="android.permission.INTERNET"/>
+        <uses-permission
+            android:name="android.permission.READ_SYNC_SETTINGS"/>
+        <uses-permission
+            android:name="android.permission.WRITE_SYNC_SETTINGS"/>
+        <uses-permission
+            android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+
     </application>
 
 </manifest>
