--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -4,6 +4,7 @@
     package="com.example.andrewseto.echacks">
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -31,6 +32,12 @@
             android:theme="@style/AppTheme"/>
         <activity android:name=".Profile"
             android:label="Profile"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".NewGoal"
+            android:label="NewGoal"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".RewardScreen"
+            android:label="RewardScreen"
             android:theme="@style/AppTheme"/>
 
         <uses-permission
