--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        >
         <activity android:name=".WelcomeScreen">
             android:name=".WelcomeScreen"
             android:configChanges="orientation|keyboardHidden|screenSize"
@@ -28,10 +29,7 @@
             android:label="RegisterScreen"
             android:theme="@style/AppTheme"/>
         <activity android:name=".RegisterScreen2"
-            android:label="Register 2"
-            android:theme="@style/AppTheme"/>
-        <activity android:name=".Profile"
-            android:label="Profile"
+            android:label="RegisterScreen2"
             android:theme="@style/AppTheme"/>
         <activity android:name=".RewardScreen"
             android:label="RewardScreen"
@@ -48,14 +46,9 @@
         <activity android:name=".MainScreenIndex"
             android:label="MainScreenIndex"
             android:theme="@style/AppTheme"/>
-        <uses-permission
-            android:name="android.permission.INTERNET"/>
-        <uses-permission
-            android:name="android.permission.READ_SYNC_SETTINGS"/>
-        <uses-permission
-            android:name="android.permission.WRITE_SYNC_SETTINGS"/>
-        <uses-permission
-            android:name="android.permission.AUTHENTICATE_ACCOUNTS"/>
+        <activity android:name=".NewTask"
+            android:label="NewTask"
+            android:theme="@style/AppTheme"/>
 
     </application>
 
